<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <Button
            android:id="@+id/back"
            android:layout_width="90dp"
            android:layout_height="70dp"
            app:icon="@android:drawable/ic_menu_revert"
            app:iconSize="50dp"
            app:iconTint="@color/orange" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/welcomeHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/welcome_txt"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tutorialHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_header"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tutorialText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            android:text="@string/how_tekst"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>