<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FinishActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/star1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:src="@android:drawable/btn_star_big_on" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:src="@android:drawable/btn_star_big_on" />

    </LinearLayout>

    <TextView
        android:id="@+id/finishHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish_header"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/finishText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/finish_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/play_again"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_menu_rotate"
        app:iconSize="30dp"
        app:iconTint="@color/orange" />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:text="@string/home"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconSize="30dp"
        app:iconTint="@color/orange" />

</LinearLayout>